# rest-grpc-benchmark

benchmarks/: .gitignore  calls.ipynb  predictions_pb2_grpc.py  requirements.txt
server-go/: go.mod  go.sum  main.go
server-go/protobufs/: predictions.pb.go  predictions.proto  predictions_grpc.pb.go
server-python/protobufs/: predictions.proto
server-python/rest/: rest.py
server-python/rpc/: predictions_pb2.py  rpc.py
server-rust/: Cargo.toml
server-rust/src/: main.rs
