[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.3", features = ["r2d2"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
r2d2_redis = "0.14.0"